ops/app/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  annotations:
    # cloud.google.com/backend-config: '{"default": "api-gateway-backend"}'
    cloud.google.com/neg: '{"ingress": true}'
spec:
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app: api-gateway
  type: NodePort

---
apiVersion: v1
kind: Service
metadata:
  name: user-api
spec:
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
      name: grpc
  selector:
    app: user-api
  type: NodePort
