ops/app/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devops-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
    # networking.gke.io/managed-certificates: "api-tuanhung-ssl"
spec:
  rules:
    # Access via IP
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: devops-frontend
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 80
    # Access via domain
    - host: tuanhung.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: devops-frontend
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 80
  # tls:
  #   - hosts:
  #       - tuanhung.xyz
